--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           </tr>
         </thead>
         <tbody id="tableBody"><!-- rows via JS --></tbody>
+        <!-- OPTIONAL: manual recalc trigger -->
+<button id="recalcBtn" type="button" style="margin:8px 0;">Recalculate</button>
+
+<!-- OPTIONAL plywood button (if not already in your HTML) -->
+<button id="btnPlywood" type="button" style="margin:8px 0;">Recompute Plywood</button>
       </table>
     </div>
   </section>
